service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-service
  labels:
    app: hello-app
spec:
  type: LoadBalancer         # Type LoadBalancer provides an external IP
  selector:
    app: hello-app
  ports:
    - protocol: TCP
      port: 80               # External port
      targetPort: 8080       # Internal port in the pod
